--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ backcall==0.2.0
 bleach==4.1.0
 cffi==1.15.0
 cloudpickle==2.0.0
+cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
+fonttools==4.28.1
 gym==0.21.0
 gym-minigrid==1.0.2
 ipykernel==6.5.0
@@ -24,7 +26,9 @@ jupyter-console==6.4.0
 jupyter-core==4.9.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
+matplotlib==3.5.0
 matplotlib-inline==0.1.3
 mistune==0.8.4
 nbclient==0.5.8
@@ -38,6 +42,7 @@ pandocfilters==1.5.0
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.4.0
 prometheus-client==0.12.0
 prompt-toolkit==3.0.22
 ptyprocess==0.7.0
@@ -50,9 +55,11 @@ pyzmq==22.3.0
 qtconsole==5.2.0
 QtPy==1.11.2
 Send2Trash==1.8.0
+setuptools-scm==6.3.2
 six==1.16.0
 terminado==0.12.1
 testpath==0.5.0
+tomli==1.2.2
 tornado==6.1
 traitlets==5.1.1
 wcwidth==0.2.5
